# todolist_pydesk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ai_todo/: __init__.py  __main__.py
src/ai_todo/app/: bootstrap.py  config.py  main.py
src/ai_todo/core/: ai_merge.py  filters.py  models.py  scheduler.py
src/ai_todo/services/: ai_client.py  backup.py  logging_service.py  notifications.py  tray.py
src/ai_todo/storage/: json_store.py  migrations.py  paths.py  sample_data.py  settings_store.py
src/ai_todo/ui/: detail_panel.py  main_window.py  task_list.py  today_panel.py
src/ai_todo/ui/dialogs/: __init__.py  ai_suggestions_dialog.py  settings_dialog.py  task_dialog.py
tests/: test_ai_client.py  test_ai_merge.py  test_bootstrap.py  test_filters.py  test_models.py  test_scheduler.py  test_settings_store.py  test_storage.py  test_task_dialog.py
