[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-todo-manager"
version = "0.1.0"
description = "AI assisted desktop todo manager built with Tkinter."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "requests>=2.32.0,<3",
  "pystray>=0.19.5,<0.20",
  "Pillow>=10.4.0,<11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "pytest-cov>=5.0.0,<6",
  "ruff>=0.6.0,<0.7",
  "pyinstaller>=6.10.0,<7"
]

[project.scripts]
ai-todo = "ai_todo.app.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
